improve issues lint